[metadata]
name = password-rba-horizon
summary = A risk-based authentication plugin for OpenStack Dashboard
description-file =
    README.md
author = Vincent Unsel & Stephan Wiefling
author_email = vincent.unsel@smail.inf.h-brs.de & stephan.wiefling@h-brs.de
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    password_rba_horizon
